--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
   </section>
 
   <main>
-    <section class="section page-pricing" id="page-pricing">
+    <section class="section" id="page-pricing">
       <div class="container">
         <h2 class="section-title">Формы подписки</h2>
 
@@ -104,6 +104,50 @@
             На всех тарифах возможно прослушивание музыки с мобильных устройств. На премиум тарифе вы можете скачать
             все композиции на ваше устройство и слушать музыку без подключения к интернету
           </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="page-news">
+      <div class="container">
+        <h2 class="section-title">Последние новости</h2>
+
+        <div class="news-item news-item--img-left mb-7">
+          <img class="news-item-image" src="./images/Music to Be Murdered By.png" alt="Music to Be Murdered By">
+          <div class="news-item-body">
+            <h3 class="news-item-title">Music to Be Murdered By</h3>
+            <p class="news-item-text">
+              Новый альбом Eminem «Music to Be Murdered By» уже доступен в нашем сервисе. На альбоме вас ждёт 20
+              новых треков.
+            </p>
+          </div>
+          <div class="news-item-footer">
+            <div class="news-item-author">
+              <img class="news-item-avatar" src="./images/avatar.png" alt="News author avatar">
+              <p class="news-item-author-name">Music box</p>
+              <p class="news-item-date">17/01/2020</p>
+            </div>
+            <a class="btn btn-dark-gray-outline btn-sm" href="#">К альбому</a>
+          </div>
+        </div>
+
+        <div class="news-item news-item--img-right">
+          <img class="news-item-image" src="./images/Ordinary Man.png" alt="Ordinary Man">
+          <div class="news-item-body">
+            <h3 class="news-item-title">Ordinary Man</h3>
+            <p class="news-item-text">
+              Легенда рока Оззи Озборн спустя 10 лет выпустил новый альбом Ordinary Man. Слушайте в числе первых на
+              Music Box
+            </p>
+          </div>
+          <div class="news-item-footer">
+            <div class="news-item-author">
+              <img class="news-item-avatar" src="./images/avatar.png" alt="News author avatar">
+              <p class="news-item-author-name">Music box</p>
+              <p class="news-item-date">24/02/2020</p>
+            </div>
+            <a class="btn btn-dark-gray-outline btn-sm" href="#">К альбому</a>
+          </div>
         </div>
       </div>
     </section>
