--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
               <p class="pricing-item-value">
                 0 <span class="pricing-item-currency">руб.</span>
               </p>
-              <a class="btn btn-white-outline btn-fill" href="#">Оформить</a>
+              <a class="btn btn-white-outline btn-fill mb-7" href="#">Оформить</a>
               <p class="pricing-item-footer">
                 Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции музыки. Присутствует реклама
               </p>
@@ -82,7 +82,7 @@
               <p class="pricing-item-value">
                 250 <span class="pricing-item-currency">руб.</span>
               </p>
-              <a class="btn btn-white-outline btn-fill" href="#">Оформить</a>
+              <a class="btn btn-white-outline btn-fill mb-7" href="#">Оформить</a>
               <p class="pricing-item-footer">
                 Оплата в месяц. Стандартный тариф предоставляет доступ ко всей коллекции музыки в среднем качестве
               </p>
@@ -93,7 +93,7 @@
               <p class="pricing-item-value">
                 500 <span class="pricing-item-currency">руб.</span>
               </p>
-              <a class="btn btn-white-outline btn-fill" href="#">Оформить</a>
+              <a class="btn btn-white-outline btn-fill mb-7" href="#">Оформить</a>
               <p class="pricing-item-footer">
                 Оплата в месяц. Премиум тариф предоставляет доступ ко всей коллекции музыки в высоком качестве
               </p>
