--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
             </div>
           </div>
 
-          <p class="text-center">
+          <p class="fs-1 text-center">
             На всех тарифах возможно прослушивание музыки с мобильных устройств. На премиум тарифе вы можете скачать
             все композиции на ваше устройство и слушать музыку без подключения к интернету
           </p>
@@ -116,7 +116,7 @@
           <img class="news-item-image" src="./images/Music to Be Murdered By.png" alt="Music to Be Murdered By">
           <div class="news-item-body">
             <h3 class="news-item-title">Music to Be Murdered By</h3>
-            <p class="news-item-text">
+            <p class="fs-1">
               Новый альбом Eminem «Music to Be Murdered By» уже доступен в нашем сервисе. На альбоме вас ждёт 20
               новых треков.
             </p>
@@ -135,7 +135,7 @@
           <img class="news-item-image" src="./images/Ordinary Man.png" alt="Ordinary Man">
           <div class="news-item-body">
             <h3 class="news-item-title">Ordinary Man</h3>
-            <p class="news-item-text">
+            <p class="fs-1">
               Легенда рока Оззи Озборн спустя 10 лет выпустил новый альбом Ordinary Man. Слушайте в числе первых на
               Music Box
             </p>
@@ -148,6 +148,26 @@
             </div>
             <a class="btn btn-dark-gray-outline btn-sm" href="#">К альбому</a>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section section--same-vertical" id="page-app">
+      <div class="container">
+        <h2 class="section-title">Мобильное приложение</h2>
+
+        <div class="section-content section-content--row section-content--two-rows section-content--mobile-reverse">
+          <div class="app-text">
+            <p class="fs-1 mb-1">
+              Воспользуйтесь нашим мобильным приложением. Оно позволит слушать музыку с любого устройства на базе
+              операционных систем Androind и iOS
+              <br><br>
+              С тарифом «Премиум» приложение позволяет скачивать все композиции из нашей коллекции. Вы можете слушать
+              музыку даже без интернета.
+            </p>
+            <div class="btn btn-red btn-pill btn-sm-wide">Скачать</div>
+          </div>
+          <img class="app-image mb-mobile-1" src="./images/iphone.png" alt="Iphone image">
         </div>
       </div>
     </section>
