--- a/src/index.html
+++ b/src/index.html
@@ -172,5 +172,53 @@
       </div>
     </section>
   </main>
+
+  <footer class="footer bg-gradient">
+    <div class="container footer-content">
+      <div class="footer-col">
+        <h2 class="footer-col-title">О нас</h2>
+        <a class="footer-link" href="#">История компании</a>
+        <a class="footer-link" href="#">Карьера</a>
+        <a class="footer-link" href="#">Особенности</a>
+        <a class="footer-link" href="#">Пресса</a>
+      </div>
+      <div class="footer-col">
+        <h2 class="footer-col-title">Поддержка</h2>
+        <a class="footer-link" href="#">База знаний</a>
+        <a class="footer-link" href="#">Тарифы</a>
+        <a class="footer-link" href="#">Мобильное приложение</a>
+        <a class="footer-link" href="#">Условия использования</a>
+      </div>
+      <div class="footer-col">
+        <h2 class="footer-col-title">Контакты</h2>
+        <a class="footer-link" href="mailto:hello@music.box">hello@music.box</a>
+        <p class="footer-link">Russia, Moscow. Music Box studio</p>
+        <a class="footer-link" href="tel:+74999999999">+ 7 499 999 99 99</a>
+      </div>
+      <div class="footer-col">
+        <h2 class="footer-col-title">Подписывайтесь</h2>
+      </div>
+    </div>
+    <hr class="divider">
+    <div class="container">
+      <ul class="footer-nav">
+        <li>
+          <a class="footer-link" href="#">Магазин</a>
+        </li>
+        <li>
+          <a class="footer-link" href="#">Обслуживание</a>
+        </li>
+        <li>
+          <a class="footer-link" href="#">Блог</a>
+        </li>
+        <li>
+          <a class="footer-link" href="#">Поддержка</a>
+        </li>
+        <li>
+          <a class="footer-link" href="#">Контакты</a>
+        </li>
+      </ul>
+    </div>
+  </footer>
 </body>
 </html>
