--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,13 @@
 
         <ul class="navigation-menu">
           <li class="navigation-menu-item">
-            <a class="navigation-menu-link navigation-menu-link--active" href="#">Главная</a>
+            <a class="navigation-menu-link navigation-menu-link--active" href="index.html">Главная</a>
           </li>
           <li class="navigation-menu-item">
             <a class="navigation-menu-link" href="#">Каталог</a>
           </li>
           <li class="navigation-menu-item">
-            <a class="navigation-menu-link" href="#">Исполнители</a>
+            <a class="navigation-menu-link" href="artist.html">Исполнители</a>
           </li>
           <li class="navigation-menu-item">
             <a class="navigation-menu-link" href="#">Контакты</a>
@@ -34,7 +34,7 @@
     </div>
   </header>
 
-  <section class="page-description" id="page-description">
+  <section class="page-description page-description--main" id="page-description">
     <div class="container">
       <h1>Онлайн музыка где угодно</h1>
       <h2 class="mb-2 mb-mobile-1">без ограничений</h2>
