added socials nav to footer

--- a/src/index.html
+++ b/src/index.html
@@ -197,6 +197,20 @@
       </div>
       <div class="footer-col">
         <h2 class="footer-col-title">Подписывайтесь</h2>
+        <div class="footer-socials">
+          <a href="#">
+            <img src="./images/Google+.png" alt="google">
+          </a>
+          <a href="#">
+            <img src="./images/Twitter.png" alt="twitter">
+          </a>
+          <a href="#">
+            <img src="./images/Facebook.png" alt="facebook">
+          </a>
+          <a href="#">
+            <img src="./images/Instagram.png" alt="instagram">
+          </a>
+        </div>
       </div>
     </div>
     <hr class="divider">
