--- a/src/artist.html
+++ b/src/artist.html
@@ -39,14 +39,77 @@
       <h1 class="text-start mb-1">Morten Harket</h1>
       <p class="fs-1 text-start color-white mb-5">24 875 поклонников</p>
       <div class="artist-description-buttons">
-        <button class="btn btn-purple artist-description-btn artist-description-btn--play">
+        <button class="btn btn-purple btn-icon btn-icon--play">
           <span>Микс</span>
         </button>
-        <button class="btn btn-red artist-description-btn artist-description-btn--favorite">
+        <button class="btn btn-red btn-icon btn-icon--heart">
           <span>В избранное</span>
         </button>
       </div>
     </div>
   </section>
+
+
+  <footer class="footer bg-gradient">
+    <div class="container footer-content">
+      <div class="footer-col">
+        <h2 class="footer-col-title">О нас</h2>
+        <a class="footer-link" href="#">История компании</a>
+        <a class="footer-link" href="#">Карьера</a>
+        <a class="footer-link" href="#">Особенности</a>
+        <a class="footer-link" href="#">Пресса</a>
+      </div>
+      <div class="footer-col">
+        <h2 class="footer-col-title">Поддержка</h2>
+        <a class="footer-link" href="#">База знаний</a>
+        <a class="footer-link" href="#">Тарифы</a>
+        <a class="footer-link" href="#">Мобильное приложение</a>
+        <a class="footer-link" href="#">Условия использования</a>
+      </div>
+      <div class="footer-col">
+        <h2 class="footer-col-title">Контакты</h2>
+        <a class="footer-link" href="mailto:hello@music.box">hello@music.box</a>
+        <p class="footer-link">Russia, Moscow. Music Box studio</p>
+        <a class="footer-link" href="tel:+74999999999">+ 7 499 999 99 99</a>
+      </div>
+      <div class="footer-col">
+        <h2 class="footer-col-title">Подписывайтесь</h2>
+        <div class="footer-socials">
+          <a href="#">
+            <img src="./images/Google+.png" alt="google">
+          </a>
+          <a href="#">
+            <img src="./images/Twitter.png" alt="twitter">
+          </a>
+          <a href="#">
+            <img src="./images/Facebook.png" alt="facebook">
+          </a>
+          <a href="#">
+            <img src="./images/Instagram.png" alt="instagram">
+          </a>
+        </div>
+      </div>
+    </div>
+    <hr class="divider">
+    <div class="container">
+      <ul class="footer-nav">
+        <li>
+          <a class="footer-link" href="#">Магазин</a>
+        </li>
+        <li>
+          <a class="footer-link" href="#">Обслуживание</a>
+        </li>
+        <li>
+          <a class="footer-link" href="#">Блог</a>
+        </li>
+        <li>
+          <a class="footer-link" href="#">Поддержка</a>
+        </li>
+        <li>
+          <a class="footer-link" href="#">Контакты</a>
+        </li>
+      </ul>
+    </div>
+  </footer>
 </body>
 </html>
