step 9: page-discography

--- a/src/artist.html
+++ b/src/artist.html
@@ -54,7 +54,7 @@
     <div class="container">
       <h2 class="section-title">Популярные треки</h2>
 
-      <ul class="popular-tracks">
+      <ul class="popular-tracks grid grid--items-2">
         <li class="popular-tracks-info">
           <img class="popular-tracks-cover" src="./images/Wild%20Seed.png" alt="Wild Seed">
           <h3 class="popular-tracks-song">Spanish Step</h3>
@@ -95,9 +95,47 @@
     </div>
   </section>
 
-  <section class="section section--artist">
+  <section class="section section--artist" id="page-discography">
     <div class="container">
       <h2 class="section-title">Дискография</h2>
+
+      <div class="grid grid--items-4">
+        <div class="discography-item">
+          <img class="discography-item-cover" src="./images/Brother.png" alt="Brother">
+          <h3 class="discography-item-album-name">Brother</h3>
+          <p class="fs-1">2014</p>
+        </div>
+
+        <div class="discography-item">
+          <img class="discography-item-cover" src="./images/Out%20of%20My%20Hands.png" alt="Out Of My Hands">
+          <h3 class="discography-item-album-name">Out Of My Hands</h3>
+          <p class="fs-1">2012</p>
+        </div>
+
+        <div class="discography-item">
+          <img class="discography-item-cover" src="./images/Letter%20from%20Egypt.png" alt="Letter From Egypt">
+          <h3 class="discography-item-album-name">Letter From Egypt</h3>
+          <p class="fs-1">2008</p>
+        </div>
+
+        <div class="discography-item">
+          <img class="discography-item-cover" src="./images/Vogts%20Villa.png" alt="Vogts Vills">
+          <h3 class="discography-item-album-name">Vogts Vills</h3>
+          <p class="fs-1">1996</p>
+        </div>
+
+        <div class="discography-item">
+          <img class="discography-item-cover" src="./images/Wild%20Seed.png" alt="Wild Seed">
+          <h3 class="discography-item-album-name">Wild Seed</h3>
+          <p class="fs-1">1995</p>
+        </div>
+
+        <div class="discography-item">
+          <img class="discography-item-cover" src="./images/Poetenes%20Evangelium.png" alt="Poetenes Evangelium">
+          <h3 class="discography-item-album-name">Poetenes Evangelium</h3>
+          <p class="fs-1">1993</p>
+        </div>
+      </div>
     </div>
   </section>
 
