step 10: page-similar

--- a/src/artist.html
+++ b/src/artist.html
@@ -139,9 +139,59 @@
     </div>
   </section>
 
-  <section class="section section--artist section--same-vertical">
+  <section class="section section--artist section--same-vertical" id="page-similar">
     <div class="container">
       <h2 class="section-title">Похожие исполнители</h2>
+
+      <div class="grid grid--items-4">
+        <div class="similar">
+          <img class="similar-cover" src="./images/A-ha.png" alt="A-Ha">
+          <h3 class="similar-name">A-Ha</h3>
+          <p class="similar-fans">417 086 поклонников</p>
+        </div>
+
+        <div class="similar">
+          <img class="similar-cover" src="./images/Tears%20for%20Fears.png" alt="Tears For Fears">
+          <h3 class="similar-name">Tears For Fears</h3>
+          <p class="similar-fans">434 086 поклонников</p>
+        </div>
+
+        <div class="similar">
+          <img class="similar-cover" src="./images/Duran%20Duran.png" alt="Duran Duran">
+          <h3 class="similar-name">Duran Duran</h3>
+          <p class="similar-fans">631 071 поклонник</p>
+        </div>
+
+        <div class="similar">
+          <img class="similar-cover" src="./images/Jack%20Savoretti.png" alt="Jack Savoretti">
+          <h3 class="similar-name">Jack Savoretti</h3>
+          <p class="similar-fans">26 857 поклонников</p>
+        </div>
+
+        <div class="similar">
+          <img class="similar-cover" src="./images/Keane.png" alt="Keane">
+          <h3 class="similar-name">Keane</h3>
+          <p class="similar-fans">1 704 358 поклонников</p>
+        </div>
+
+        <div class="similar">
+          <img class="similar-cover" src="./images/Frank%20Sinatra.png" alt="Frank Sinatra">
+          <h3 class="similar-name">Frank Sinatra</h3>
+          <p class="similar-fans">1 653 882 поклонников</p>
+        </div>
+
+        <div class="similar">
+          <img class="similar-cover" src="./images/Paul%20Young.png" alt="Paul Young">
+          <h3 class="similar-name">Paul Young</h3>
+          <p class="similar-fans">50 329 поклонников</p>
+        </div>
+
+        <div class="similar">
+          <img class="similar-cover" src="./images/Chris%20Rea.png" alt="Chris Rea">
+          <h3 class="similar-name">Chris Rea</h3>
+          <p class="similar-fans">73 351 поклонников</p>
+        </div>
+      </div>
     </div>
   </section>
 </main>
