Fixes for tests. 1. Navigation and home section

--- a/src/index.html
+++ b/src/index.html
@@ -8,36 +8,38 @@
 <body>
 <header class="header">
   <div class="container">
-    <nav class="navigation tt-uppercase">
-      <h3 class="navigation-logo">
+    <div class="navigation tt-uppercase">
+      <div class="navigation-logo">
         <img class="navigation-logo-icon" src="./images/logo.svg" alt="logo">
-        Music Box
-      </h3>
+        <h3 class="fw-normal">Music Box</h3>
+      </div>
 
-      <ul class="navigation-menu">
-        <li class="navigation-menu-item">
-          <a class="navigation-menu-link navigation-menu-link--active" href="index.html">Главная</a>
-        </li>
-        <li class="navigation-menu-item">
-          <a class="navigation-menu-link" href="#">Каталог</a>
-        </li>
-        <li class="navigation-menu-item">
-          <a class="navigation-menu-link" href="artist.html">Исполнители</a>
-        </li>
-        <li class="navigation-menu-item">
-          <a class="navigation-menu-link" href="#">Контакты</a>
-        </li>
-      </ul>
+      <nav>
+        <ul class="navigation-menu">
+          <li class="navigation-menu-item">
+            <a class="navigation-menu-link navigation-menu-link--active" href="index.html">Главная</a>
+          </li>
+          <li class="navigation-menu-item">
+            <a class="navigation-menu-link" href="#">Каталог</a>
+          </li>
+          <li class="navigation-menu-item">
+            <a class="navigation-menu-link" href="artist.html">Исполнители</a>
+          </li>
+          <li class="navigation-menu-item">
+            <a class="navigation-menu-link" href="#">Контакты</a>
+          </li>
+        </ul>
+      </nav>
 
       <input class="navigation-search" type="text" placeholder="Поиск...">
-    </nav>
+    </div>
   </div>
 </header>
 
 <section class="page-description page-description--main" id="page-description">
   <div class="container">
     <h1>Онлайн музыка где угодно</h1>
-    <h2 class="mb-2 mb-mobile-1">без ограничений</h2>
+    <h2 class="mb-3 mb-mobile-1">без ограничений</h2>
     <p class="fs-1 color-white mb-1">
       Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки
     </p>
