Fixes for tests. 2. Navigation and home section

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <div class="navigation tt-uppercase">
       <div class="navigation-logo">
         <img class="navigation-logo-icon" src="./images/logo.svg" alt="logo">
-        <h3 class="fw-normal">Music Box</h3>
+        <span class="navigation-logo-title">Music Box</span>
       </div>
 
       <nav>
