Fixes for tests. Page-pricing desktop

--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
             <p class="pricing-item-value">
               0 <span class="pricing-item-currency">руб.</span>
             </p>
-            <a class="btn btn-white-outline btn-fill mb-7" href="#">Оформить</a>
+            <a class="btn btn-white-outline btn-fill mb-7 fs-1" href="#">Оформить</a>
             <p class="pricing-item-footer">
               Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции музыки. Присутствует реклама
             </p>
@@ -84,7 +84,7 @@
             <p class="pricing-item-value">
               250 <span class="pricing-item-currency">руб.</span>
             </p>
-            <a class="btn btn-white-outline btn-fill mb-7" href="#">Оформить</a>
+            <a class="btn btn-white-outline btn-fill mb-7 fs-1" href="#">Оформить</a>
             <p class="pricing-item-footer">
               Оплата в месяц. Стандартный тариф предоставляет доступ ко всей коллекции музыки в среднем качестве
             </p>
@@ -95,7 +95,7 @@
             <p class="pricing-item-value">
               500 <span class="pricing-item-currency">руб.</span>
             </p>
-            <a class="btn btn-white-outline btn-fill mb-7" href="#">Оформить</a>
+            <a class="btn btn-white-outline btn-fill mb-7 fs-1" href="#">Оформить</a>
             <p class="pricing-item-footer">
               Оплата в месяц. Премиум тариф предоставляет доступ ко всей коллекции музыки в высоком качестве
             </p>
