Fixes for tests. Page-pricing desktop

--- a/src/index.html
+++ b/src/index.html
@@ -62,8 +62,8 @@
 </section>
 
 <main>
-  <section class="section" id="page-pricing">
-    <div class="container">
+  <section class="section">
+    <div class="container" id="page-pricing">
       <h2 class="section-title">Формы подписки</h2>
 
       <div class="section-content">
