Fixes for tests. Page-pricing desktop

--- a/src/index.html
+++ b/src/index.html
@@ -62,52 +62,48 @@
 </section>
 
 <main>
-  <section class="section">
-    <div class="container" id="page-pricing">
-      <h2 class="section-title">Формы подписки</h2>
+  <section class="section" id="page-pricing">
+    <h2 class="section-title">Формы подписки</h2>
 
-      <div class="section-content">
-        <div class="pricing-list">
-          <div class="pricing-item pricing-item--free">
-            <h3 class="pricing-item-title">Бесплатная</h3>
-            <p class="pricing-item-value">
-              0 <span class="pricing-item-currency">руб.</span>
-            </p>
-            <a class="btn btn-white-outline btn-fill mb-7 fs-1" href="#">Оформить</a>
-            <p class="pricing-item-footer">
-              Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции музыки. Присутствует реклама
-            </p>
-          </div>
+    <div class="pricing-list">
+      <div class="pricing-item pricing-item--free">
+        <h3 class="pricing-item-title">Бесплатная</h3>
+        <p class="pricing-item-value">
+          0 <span class="pricing-item-currency">руб.</span>
+        </p>
+        <a class="btn btn-white-outline btn-fill mb-7 fs-1" href="#">Оформить</a>
+        <p class="pricing-item-footer">
+          Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции музыки. Присутствует реклама
+        </p>
+      </div>
 
-          <div class="pricing-item pricing-item--standart">
-            <h3 class="pricing-item-title">Стандартная</h3>
-            <p class="pricing-item-value">
-              250 <span class="pricing-item-currency">руб.</span>
-            </p>
-            <a class="btn btn-white-outline btn-fill mb-7 fs-1" href="#">Оформить</a>
-            <p class="pricing-item-footer">
-              Оплата в месяц. Стандартный тариф предоставляет доступ ко всей коллекции музыки в среднем качестве
-            </p>
-          </div>
+      <div class="pricing-item pricing-item--standart">
+        <h3 class="pricing-item-title">Стандартная</h3>
+        <p class="pricing-item-value">
+          250 <span class="pricing-item-currency">руб.</span>
+        </p>
+        <a class="btn btn-white-outline btn-fill mb-7 fs-1" href="#">Оформить</a>
+        <p class="pricing-item-footer">
+          Оплата в месяц. Стандартный тариф предоставляет доступ ко всей коллекции музыки в среднем качестве
+        </p>
+      </div>
 
-          <div class="pricing-item pricing-item--premium">
-            <h3 class="pricing-item-title">Премиум</h3>
-            <p class="pricing-item-value">
-              500 <span class="pricing-item-currency">руб.</span>
-            </p>
-            <a class="btn btn-white-outline btn-fill mb-7 fs-1" href="#">Оформить</a>
-            <p class="pricing-item-footer">
-              Оплата в месяц. Премиум тариф предоставляет доступ ко всей коллекции музыки в высоком качестве
-            </p>
-          </div>
-        </div>
-
-        <p class="fs-1 text-center">
-          На всех тарифах возможно прослушивание музыки с мобильных устройств. На премиум тарифе вы можете скачать
-          все композиции на ваше устройство и слушать музыку без подключения к интернету
+      <div class="pricing-item pricing-item--premium">
+        <h3 class="pricing-item-title">Премиум</h3>
+        <p class="pricing-item-value">
+          500 <span class="pricing-item-currency">руб.</span>
+        </p>
+        <a class="btn btn-white-outline btn-fill mb-7 fs-1" href="#">Оформить</a>
+        <p class="pricing-item-footer">
+          Оплата в месяц. Премиум тариф предоставляет доступ ко всей коллекции музыки в высоком качестве
         </p>
       </div>
     </div>
+
+    <p class="fs-1 text-center">
+      На всех тарифах возможно прослушивание музыки с мобильных устройств. На премиум тарифе вы можете скачать
+      все композиции на ваше устройство и слушать музыку без подключения к интернету
+    </p>
   </section>
 
   <section class="section" id="page-news">
