--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,8 @@
   </div>
 </header>
 
-<section class="page-description page-description--main" id="page-description">
-  <div class="container">
+<section class="page-description page-description--main text-center" id="page-description">
+  <div class="limit-content">
     <h1>Онлайн музыка где угодно</h1>
     <h2 class="mb-3 mb-mobile-1">без ограничений</h2>
     <p class="fs-1 color-white mb-1">
@@ -107,66 +107,62 @@
   </section>
 
   <section class="section" id="page-news">
-    <div class="container">
-      <h2 class="section-title">Последние новости</h2>
+    <h2 class="section-title">Последние новости</h2>
 
-      <div class="news-item news-item--img-left mb-7">
-        <img class="news-item-image" src="./images/Music to Be Murdered By.png" alt="Music to Be Murdered By">
-        <div class="news-item-body">
-          <h3 class="news-item-title">Music to Be Murdered By</h3>
-          <p class="fs-1">
-            Новый альбом Eminem «Music to Be Murdered By» уже доступен в нашем сервисе. На альбоме вас ждёт 20
-            новых треков.
-          </p>
-        </div>
-        <div class="news-item-footer">
-          <div class="news-item-author">
-            <img class="news-item-avatar" src="./images/avatar.png" alt="News author avatar">
-            <p class="news-item-author-name">Music box</p>
-            <p class="news-item-date">17/01/2020</p>
-          </div>
-          <a class="btn btn-dark-gray-outline btn-sm" href="#">К альбому</a>
-        </div>
+    <div class="news-item news-item--img-left mb-7">
+      <img class="news-item-image" src="./images/Music to Be Murdered By.png" alt="Music to Be Murdered By">
+      <div class="news-item-body">
+        <h3 class="news-item-title">Music to Be Murdered By</h3>
+        <p class="fs-1">
+          Новый альбом Eminem «Music to Be Murdered By» уже доступен в нашем сервисе. На альбоме вас ждёт 20
+          новых треков.
+        </p>
       </div>
+      <div class="news-item-footer">
+        <div class="news-item-author">
+          <img class="news-item-avatar" src="./images/avatar.png" alt="News author avatar">
+          <p class="news-item-author-name">Music box</p>
+          <p class="news-item-date">17/01/2020</p>
+        </div>
+        <a class="btn btn-dark-gray-outline btn-sm" href="#">К альбому</a>
+      </div>
+    </div>
 
-      <div class="news-item news-item--img-right">
-        <img class="news-item-image" src="./images/Ordinary Man.png" alt="Ordinary Man">
-        <div class="news-item-body">
-          <h3 class="news-item-title">Ordinary Man</h3>
-          <p class="fs-1">
-            Легенда рока Оззи Озборн спустя 10 лет выпустил новый альбом Ordinary Man. Слушайте в числе первых на
-            Music Box
-          </p>
+    <div class="news-item news-item--img-right">
+      <img class="news-item-image" src="./images/Ordinary Man.png" alt="Ordinary Man">
+      <div class="news-item-body">
+        <h3 class="news-item-title">Ordinary Man</h3>
+        <p class="fs-1">
+          Легенда рока Оззи Озборн спустя 10 лет выпустил новый альбом Ordinary Man. Слушайте в числе первых на
+          Music Box
+        </p>
+      </div>
+      <div class="news-item-footer">
+        <div class="news-item-author">
+          <img class="news-item-avatar" src="./images/avatar.png" alt="News author avatar">
+          <p class="news-item-author-name">Music box</p>
+          <p class="news-item-date">24/02/2020</p>
         </div>
-        <div class="news-item-footer">
-          <div class="news-item-author">
-            <img class="news-item-avatar" src="./images/avatar.png" alt="News author avatar">
-            <p class="news-item-author-name">Music box</p>
-            <p class="news-item-date">24/02/2020</p>
-          </div>
-          <a class="btn btn-dark-gray-outline btn-sm" href="#">К альбому</a>
-        </div>
+        <a class="btn btn-dark-gray-outline btn-sm" href="#">К альбому</a>
       </div>
     </div>
   </section>
 
   <section class="section section--same-vertical" id="page-app">
-    <div class="container">
-      <h2 class="section-title">Мобильное приложение</h2>
+    <h2 class="section-title">Мобильное приложение</h2>
 
-      <div class="section-content section-content--row section-content--two-rows section-content--mobile-reverse">
-        <div class="app-text">
-          <p class="fs-1 mb-1">
-            Воспользуйтесь нашим мобильным приложением. Оно позволит слушать музыку с любого устройства на базе
-            операционных систем Androind и iOS
-            <br><br>
-            С тарифом «Премиум» приложение позволяет скачивать все композиции из нашей коллекции. Вы можете слушать
-            музыку даже без интернета.
-          </p>
-          <div class="btn btn-red btn-pill btn-sm-wide">Скачать</div>
-        </div>
-        <img class="app-image mb-mobile-1" src="./images/iphone.png" alt="Iphone image">
+    <div class="section-content section-content--row section-content--two-rows section-content--mobile-reverse">
+      <div class="app-text">
+        <p class="fs-1 mb-1">
+          Воспользуйтесь нашим мобильным приложением. Оно позволит слушать музыку с любого устройства на базе
+          операционных систем Androind и iOS
+          <br><br>
+          С тарифом «Премиум» приложение позволяет скачивать все композиции из нашей коллекции. Вы можете слушать
+          музыку даже без интернета.
+        </p>
+        <div class="btn btn-red btn-pill btn-sm-wide">Скачать</div>
       </div>
+      <img class="app-image mb-mobile-1" src="./images/iphone.png" alt="Iphone image">
     </div>
   </section>
 </main>
@@ -212,25 +208,23 @@
     </div>
   </div>
   <hr class="divider">
-  <div class="container">
-    <ul class="footer-nav">
-      <li>
-        <a class="footer-link" href="#">Магазин</a>
-      </li>
-      <li>
-        <a class="footer-link" href="#">Обслуживание</a>
-      </li>
-      <li>
-        <a class="footer-link" href="#">Блог</a>
-      </li>
-      <li>
-        <a class="footer-link" href="#">Поддержка</a>
-      </li>
-      <li>
-        <a class="footer-link" href="#">Контакты</a>
-      </li>
-    </ul>
-  </div>
+  <ul class="footer-nav">
+    <li>
+      <a class="footer-link" href="#">Магазин</a>
+    </li>
+    <li>
+      <a class="footer-link" href="#">Обслуживание</a>
+    </li>
+    <li>
+      <a class="footer-link" href="#">Блог</a>
+    </li>
+    <li>
+      <a class="footer-link" href="#">Поддержка</a>
+    </li>
+    <li>
+      <a class="footer-link" href="#">Контакты</a>
+    </li>
+  </ul>
 </footer>
 </body>
 </html>
