header refactor after tests

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,12 @@
   <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
-<header class="header limit-content mx-auto">
+<header class="header limit-content">
   <div
-    class="navigation mb-mobile-1 tt-uppercase d-flex flex-mobile-column align-items-center align-items-mobile-flex-start"
+    class="navigation tt-uppercase d-flex flex-mobile-column align-items-center align-items-mobile-flex-start"
   >
     <div class="d-flex align-items-center me-9 mb-mobile-1">
-      <img class="navigation-logo-icon me-1 me-mobile-0" src="./images/logo.svg" alt="logo">
+      <img class="navigation-logo-icon me-1" src="./images/logo.svg" alt="logo">
       <span class="color-white fs-ultra-small fw-normal fw-mobile-bold">Music Box</span>
     </div>
 
